@startuml
!define BGCOLOR white
skinparam backgroundColor BGCOLOR
skinparam classAttributeIconSize 0
hide circle

class SpendTrack {
    + run()
}

class Storage {
    - filePath: String
    + save(expenses: ExpenseList)
    + load(expenses: ExpenseList)
    - parseLine(line: String, expenses: ExpenseList)
}

class ExpenseList {
    - budget: double
    - budgetHistory: ArrayList<String>
    + addExpense(expense: Expense)
    + deleteExpense(index: int): Expense
    + getExpense(index: int): Expense
    + setExpense(index: int, expense: Expense)
    + setBudgetDirectly(budget: double)
    + addBudgetHistory(entry: String)
    + getTotal(): double
}

class Expense {
    - description: String
    - amount: double
    - category: String
    - date: LocalDate
    - isRecurring: boolean
    + getDescription(): String
    + getAmount(): double
    + getCategory(): String
    + getDate(): LocalDate
}

class Ui {
    + showWelcome()
    + showHelp()
    + showError(message: String)
}

SpendTrack "1" --> "1" Storage : uses
SpendTrack "1" --> "1" ExpenseList : owns
SpendTrack "1" --> "1" Ui : uses
Storage ..> ExpenseList : loads into / saves from
ExpenseList "1" *-- "0..*" Expense : contains
@enduml
